feat: make project database-agnostic with JPA/Hibernate
- Convert SEQUENCE to IDENTITY generation strategy for all entities
- Add Lombok @Data annotations to entities
- Remove schema.sql - Hibernate creates tables automatically
- Use dynamic parent_id queries in data.sql for submenus
- Fix Menu Type labels: Directory->Menu, Menu->Submenu, Button->Permission
- Increase perms column to 500 characters
- Add theme-picker CSS class
- Simplify init-on-fresh-db configuration